# fiware-orion

./: .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG  CHANGES_NEXT_RELEASE  CMakeLists.txt  CMakeLists.txt.orion  CMakeLists.txt.orionld  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Changelog  ContributionPolicy.txt  Dockerfile  Force-Tests-To-Run.sh  README.md  SUBS_SPATH  ServiceRoutines  Vagrantfile  abc.txt  accumulator-server.py  anjali  broker.info  convopTest  failcountrun  functional_tests_compose.yml  get_cjexl.sh  index.html  kafka-compose.yml  latest3154.patch  launch.json  makefile  mkdocs.yml  new  q.cpp  run.patch  running.patcg  sonar-project.properties  travisTrigger.sh  unittests_that_fail_sporadically.txt
src/app/contextBroker/: CMakeLists.txt  contextBroker.cpp  orionRestServices.cpp  orionRestServices.h  producer.cpp  version.h
src/app/orionld/: CMakeLists.txt  orionRestServices.cpp  orionRestServices.h  orionld.cpp  orionldRestServices.cpp  orionldRestServices.h  version.h
src/app/proxyCoap/: CMakeLists.txt  CoapController.cpp  CoapController.h  HttpMessage.cpp  HttpProxy.cpp  HttpProxy.h  proxyCoap.cpp  version.h
src/lib/apiTypesV2/: Attribute.cpp  Attribute.h  BatchQuery.cpp  BatchQuery.h  BatchUpdate.cpp  BatchUpdate.h  CMakeLists.txt  CustomPayloadType.h  EntID.cpp  EntID.h  Entities.cpp  Entities.h  Entity.cpp  Entity.h  EntityVector.cpp  EntityVector.h  ErrorCode.cpp  ErrorCode.h  Expression.cpp  Expression.h  GeoFilter.cpp  GeoFilter.h  HttpInfo.cpp  HttpInfo.h  KafkaInfo.cpp  KafkaInfo.h  MqttInfo.cpp  MqttInfo.h  Registration.cpp  Registration.h  RegistrationVector.cpp  RegistrationVector.h  Subscription.cpp  Subscription.h  SubscriptionExpression.h  SubscriptionUpdate.cpp  SubscriptionUpdate.h  ngsiWrappers.cpp  ngsiWrappers.h
src/lib/convenienceMap/: CMakeLists.txt  mapDeleteIndividualContextEntity.cpp  mapDeleteIndividualContextEntity.h  mapDeleteIndividualContextEntityAttribute.cpp  mapDeleteIndividualContextEntityAttribute.h  mapDeleteIndividualContextEntityAttributes.cpp  mapDeleteIndividualContextEntityAttributes.h  mapGetContextEntitiesByEntityId.cpp  mapGetContextEntitiesByEntityId.h  mapGetContextEntityAttributes.cpp  mapGetContextEntityAttributes.h  mapGetContextEntityTypes.cpp  mapGetContextEntityTypes.h  mapGetEntityByIdAttributeByName.cpp  mapGetEntityByIdAttributeByName.h  mapGetIndividualContextEntity.cpp  mapGetIndividualContextEntity.h  mapGetIndividualContextEntityAttribute.cpp  mapGetIndividualContextEntityAttribute.h  mapGetIndividualContextEntityAttributes.cpp  mapGetIndividualContextEntityAttributes.h  mapPostContextEntitiesByEntityId.cpp  mapPostContextEntitiesByEntityId.h  mapPostContextEntityAttributes.cpp  mapPostContextEntityAttributes.h  mapPostContextEntityTypes.cpp  mapPostContextEntityTypes.h  mapPostEntityByIdAttributeByName.cpp  mapPostEntityByIdAttributeByName.h  mapPostIndividualContextEntity.cpp  mapPostIndividualContextEntity.h  mapPostIndividualContextEntityAttribute.cpp  mapPostIndividualContextEntityAttribute.h  mapPostIndividualContextEntityAttributes.cpp  mapPostIndividualContextEntityAttributes.h  mapPutIndividualContextEntity.cpp  mapPutIndividualContextEntity.h  mapPutIndividualContextEntityAttribute.cpp  mapPutIndividualContextEntityAttribute.h  mapPutIndividualContextEntityAttributes.cpp  (+1 more)
src/lib/jsonParse/: CMakeLists.txt  JsonNode.h  jsonAppendContextElementRequest.cpp  jsonAppendContextElementRequest.h  jsonDiscoverContextAvailabilityRequest.cpp  jsonDiscoverContextAvailabilityRequest.h  jsonNotifyContextAvailabilityRequest.cpp  jsonNotifyContextAvailabilityRequest.h  jsonNotifyContextRequest.cpp  jsonNotifyContextRequest.h  jsonNullTreat.cpp  jsonNullTreat.h  jsonParse.cpp  jsonParse.h  jsonQueryContextRequest.cpp  jsonQueryContextRequest.h  jsonQueryContextResponse.cpp  jsonQueryContextResponse.h  jsonRegisterContextRequest.cpp  jsonRegisterContextRequest.h  jsonRegisterProviderRequest.cpp  jsonRegisterProviderRequest.h  jsonRequest.cpp  jsonRequest.h  jsonSubscribeContextAvailabilityRequest.cpp  jsonSubscribeContextAvailabilityRequest.h  jsonSubscribeContextRequest.cpp  jsonSubscribeContextRequest.h  jsonUnsubscribeContextAvailabilityRequest.cpp  jsonUnsubscribeContextAvailabilityRequest.h  jsonUnsubscribeContextRequest.cpp  jsonUnsubscribeContextRequest.h  jsonUpdateContextAttributeRequest.cpp  jsonUpdateContextAttributeRequest.h  jsonUpdateContextAvailabilitySubscriptionRequest.cpp  jsonUpdateContextAvailabilitySubscriptionRequest.h  jsonUpdateContextElementRequest.cpp  jsonUpdateContextElementRequest.h  jsonUpdateContextRequest.cpp  jsonUpdateContextRequest.h  (+4 more)
src/lib/jsonParseV2/: CMakeLists.txt  badInput.cpp  badInput.h  jsonParseTypeNames.cpp  jsonParseTypeNames.h  jsonRequestTreat.cpp  jsonRequestTreat.h  parseAttributeList.cpp  parseAttributeList.h  parseAttributeValue.cpp  parseAttributeValue.h  parseAttributes.cpp  parseAttributes.h  parseBatchQuery.cpp  parseBatchQuery.h  parseBatchUpdate.cpp  parseBatchUpdate.h  parseCompoundCommon.cpp  parseCompoundCommon.h  parseContextAttribute.cpp  parseContextAttribute.h  parseContextAttributeCompoundValue.cpp  parseContextAttributeCompoundValue.h  parseEntitiesResponse.cpp  parseEntitiesResponse.h  parseEntitiesResponseV1.cpp  parseEntitiesResponseV1.h  parseEntitiesVector.cpp  parseEntitiesVector.h  parseEntity.cpp  parseEntity.h  parseEntityObject.cpp  parseEntityObject.h  parseEntityVector.cpp  parseEntityVector.h  parseExpression.cpp  parseExpression.h  parseMetadata.cpp  parseMetadata.h  parseMetadataCompoundValue.cpp  (+19 more)
src/lib/mongoBackend/: CMakeLists.txt  MongoCommonRegister.cpp  MongoCommonRegister.h  MongoCommonSubscription.cpp  MongoCommonSubscription.h  MongoCommonUpdate.cpp  MongoCommonUpdate.h  MongoGlobal.cpp  MongoGlobal.h  TriggeredSubscription.cpp  TriggeredSubscription.h  collectionOperations.cpp  dbConstants.h  (+83 more)
test/unittests/: CMakeLists.txt  commonMocks.h  main_UnitTest.cpp  optionsGetOnly_test.cpp  optionsGetPostOnly_test.cpp  testDataFromFile.cpp  testDataFromFile.h  testInit.cpp  testInit.h  unittest.cpp  unittest.h
(+9660 files in other folders)
